--- a/local.properties
+++ b/local.properties
@@ -1,5 +1,5 @@
 # windows
-# sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
 
 # macos
-sdk.dir=/Users/admin/Library/Android/sdk
+#sdk.dir=/Users/admin/Library/Android/sdk
